--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,22 @@
     <string name="no_list_items">No Items To Show</string>
     <string name="no_internet">No internt connection</string>
     <string name="nodata">No data available</string>
+    <string name="settings_menu_item">Settings</string>
+    <string name="settings_title">News Settings</string>
+    <string name="settings_section">section</string>
+    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
+    <string name="settings_order_by_label">Order By</string>
+    <string name="settings_order_by_key" translatable="false">order_by</string>
+    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_to_oldest_value</string>
+
+    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
+    <string name="settings_order_by_newest_to_oldest_label">Newest</string>
+    <string name="settings_order_by_newest_to_oldest_value" translatable="false">newest</string>
+
+    <string name="settings_order_by_oldest_to_newest_label">Oldest</string>
+    <string name="settings_order_by_oldest_to_newest_value" translatable="false">oldest</string>
+
+    <string name="settings_order_by_relevance_label">Relevance</string>
+    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
+
 </resources>
